# repos-cli

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  main.go  mise.toml  pyproject.toml
src/repos_cli/: __init__.py  __main__.py  cli.py  discovery.py  forges.py  git.py  models.py  render.py  sorting.py
tests/: test_cli.py  test_discovery.py  test_forges.py  test_git.py  test_render.py  test_sorting.py
