[project]
name = "repos-cli"
version = "0.1.0"
description = "Display a table of git repos found under one or more parent directories."
readme = "README.md"
authors = [
    { name = "Allen Gooch", email = "allen.gooch@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
]

[project.scripts]
repos = "repos_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
